# Learn-OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  how --name-only 5233029
.cache/clangd/index/: Camera.cpp.F8DC4471FFD0D72F.idx  Camera.h.7414362CF967CE85.idx  ImageLoader.h.8D91387216078931.idx  Shader.cpp.AFEA50F0D913FA39.idx  Shader.h.53F87D5E1C85BDCE.idx  VAO.cpp.D7CA0DC8CF850794.idx  VAO.h.062BE0EDC07A2DD9.idx  VBO.cpp.CF05197DB25E8CA1.idx  VBO.h.6789370E7FC90CE7.idx  glad.c.CDE1DBD1538B001F.idx  glad.h.203EA163E00D4B8A.idx  main.cpp.E409A42E73D0B768.idx  stb_image.cpp.3270BF3BA2A222E3.idx  stb_image.h.3B3C222CCBDF63A9.idx
assets/shaders/: basicShader.vert  orangeShader.frag
include/engine/: Camera.h  Shader.h  VAO.h  VBO.h
src/: glad.c  main.cpp
src/engine/: Camera.cpp  Shader.cpp  VAO.cpp  VBO.cpp
